--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -9,18 +9,422 @@
 {% set page = "" %}
 
 {# Custom tags before </head> #}
-{% block customHead %}
-{% endblock %}
+{% block customHead %}{% endblock %}
 
 {# Custom tags before </body> #}
-{% block customJs %}  
-{% endblock %}
+{% block customJs %}{% endblock %}
 
 {# Main content #}
 {% block content %}
 
-<main>
+  <main class="home-page">
+    <section class="welcome-section">
 
-</main>
+      <h3 class="ttl-tertiary">法人・個人事業主のお客様向け</h3>
+
+      <h2 class="ttl-primary">クレディセゾンの決済・ビジネスソリューション</h2>
+
+      <h4 class="ttl-quaternary">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
+        <br>
+        ビジネス成長につながる幅広いソリューションをご提供しています。</h4>
+      <div class="anc">
+        <div class="containers">
+          <ul class="flex jcC gap30 inherit anc__box">
+            <li>
+              <a href="#">
+                <span>
+                  中小企業様向け
+                  <br>
+                  サービスはこちら
+                </span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>個人事業主様向け
+                  <br>
+                  サービスはこちら</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="secondary-section">
+
+      <h2 class="ttl-primary">おすすめサービス</h2>
+
+      <div class="anc">
+        <div class="containers">
+          <ul class="flex jcC gap30 inherit anc__box">
+            <li>
+              <a href="#">
+                <span>
+                  おすすめサービス
+                </span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>おすすめサービス</span></a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>おすすめサービス</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="tertiary-section">
+
+      <h2 class="ttl-primary">目的から探す</h2>
+
+      <h4 class="ttl-quaternary">お客様のニーズや目的に合わせて様々なソリューションをご提供しています。</h4>
+
+      <div class="anc">
+        <div class="containers">
+          <ul class="flex jcC gap30 inherit anc__box">
+            <li>
+              <a href="#">
+                <span>
+                  ビジネスカードを作りたい
+                </span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>経費を削減したい</span></a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>業務を効率化したい</span></a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>資金繰りを改善したい</span></a>
+            </li>
+
+            <li>
+              <a href="#">
+                <span>資金繰りを改善したい</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="quaternary-section">
+
+      <h2 class="ttl-secondary">さまざまなニーズや課題を解決しています</h2>
+
+      <div class="grid">
+        <div class="containers">
+          <div class="flex gap30 grid">
+            <div class="grid__card">
+              <h4 class="ttl-quaternary">
+                ETCカードの導入で毎月の経費計算処理の手間と時間が削減！
+              </h4>
+
+              <div class="grid__card--img"><img src="/assets/img/common/img01.jpg" alt=""></div>
+
+              <h5 class="ttl-quinary">
+                株式会社サカイ引越センター 様
+              </h5>
+
+              <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・</h6>
+
+              <h5 class="ttl-quinary sub-title">
+                利用サービス
+              </h5>
+
+              <div class="flex fS grid__card--cat">
+                <span class="cat">カテゴリ名</span>
+              </div>
+
+              <a href="#" class="btn01">導入事例を見る</a>
+            </div>
+
+            <div class="grid__card">
+              <h4 class="ttl-quaternary">
+                ETCカードの導入で毎月の経費計算処理の手間と時間が削減！
+              </h4>
+
+              <div class="grid__card--img"><img src="/assets/img/common/img01.jpg" alt=""></div>
+
+              <h5 class="ttl-quinary">
+                株式会社サカイ引越センター 様
+              </h5>
+
+              <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・</h6>
+
+              <h5 class="ttl-quinary sub-title">
+                利用サービス
+              </h5>
+
+              <div class="flex fS grid__card--cat">
+                <span class="cat">UCエクスプレスゴールドカード</span>
+                <span class="cat">パーチェシングカード</span>
+              </div>
+
+              <a href="#" class="btn01">導入事例を見る</a>
+            </div>
+
+            <div class="grid__card">
+              <h4 class="ttl-quaternary">
+                ETCカードの導入で毎月の経費計算処理の手間と時間が削減！
+              </h4>
+
+              <div class="grid__card--img"><img src="/assets/img/common/img01.jpg" alt=""></div>
+
+              <h5 class="ttl-quinary">
+                株式会社サカイ引越センター 様
+              </h5>
+
+              <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・</h6>
+
+              <h5 class="ttl-quinary sub-title">
+                利用サービス
+              </h5>
+
+              <div class="flex fS grid__card--cat">
+                <span class="cat">UCエクスプレスゴールドカード</span>
+                <span class="cat">パーチェシングカード</span>
+              </div>
+
+              <a href="#" class="btn01">導入事例を見る</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a href="#" class="btn01">
+        <h4 class="ttl-quaternary">導入事例を見る</h4>
+      </a>
+    </section>
+
+    <section class="quinary-section">
+      <h3 class="ttl-tertiary">お役立ち資料（無料）ダウンロード</h3>
+
+      <h4 class="ttl-quaternary">中小企業の経営者様や個人事業主のよくある課題に対して解決のヒントになる資料を無料でご提供しています。是非ご活用下さい。</h4>
+
+      <div class="grid">
+        <div class="containers">
+          <div class="flex gap30 grid">
+            <div class="grid__card">
+              <div class="grid__card--img">
+                <img class="primary-img" src="/assets/img/common/img01.jpg" alt="">
+                <img class="secondary-img" src="/assets/img/common/img01.jpg" alt="">
+              </div>
+
+              <h5 class="ttl-quinary">
+                資料タイトルが入ります。
+              </h5>
+
+              <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
+
+              <div>
+                <a href="#" class="btn01">資料をダウンロード</a>
+              </div>
+            </div>
+
+            <div class="grid__card">
+              <div class="grid__card--img">
+                <img class="primary-img" src="/assets/img/common/img01.jpg" alt="">
+                <img class="secondary-img" src="/assets/img/common/img01.jpg" alt="">
+              </div>
+
+              <h5 class="ttl-quinary">
+                資料タイトルが入ります。
+              </h5>
+
+              <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
+
+              <div>
+                <a href="#" class="btn01">資料をダウンロード</a>
+              </div>
+            </div>
+
+            <div class="grid__card">
+              <div class="grid__card--img">
+                <img class="primary-img" src="/assets/img/common/img01.jpg" alt="">
+                <img class="secondary-img" src="/assets/img/common/img01.jpg" alt="">
+              </div>
+
+              <h5 class="ttl-quinary">
+                資料タイトルが入ります。
+              </h5>
+
+              <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
+
+              <div>
+                <a href="#" class="btn01">資料をダウンロード</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a href="#" class="btn01">
+        <h4 class="ttl-quaternary">お役立ち資料一覧を見る</h4>
+      </a>
+    </section>
+
+    <section class="senary-section">
+      <h3 class="ttl-tertiary">セミナー・イベント情報</h3>
+
+      <div class="sec-news">
+        <div class="containers">
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC gap40 sec-news__box--item-primary">
+              <dt class="flex aiC gap20 sp-fS">
+                <time class="time">11/20</time>
+              </dt>
+
+              <h4 class="ttl-quaternary">タイトルが入ります。タイトルが入ります。</h4>
+            </dl>
+
+            <dl class="flex aiC gap50 sec-news__box--item-secondary">
+              <dt class="flex aiC gap30 sp-fS">
+                <span class="cat">ウェビナー</span>
+
+                <h4 class="ttl-quaternary">【開催日時】2022年9月22日 10:00～11:00 【主催】株式会社〇〇〇〇
+                  <br>
+                  【対象】○○○○○のニーズ・課題をお持ちの〇〇</h4>
+              </dt>
+            </dl>
+          </a>
+
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC gap40 sec-news__box--item-primary">
+              <dt class="flex aiC gap20 sp-fS">
+                <time class="time">11/20</time>
+              </dt>
+
+              <h4 class="ttl-quaternary">タイトルが入ります。タイトルが入ります。</h4>
+            </dl>
+
+            <dl class="flex aiC gap50 sec-news__box--item-secondary">
+              <dt class="flex aiC gap30 sp-fS">
+                <span class="cat">ウェビナー</span>
+
+                <h4 class="ttl-quaternary">【開催日時】2022年9月22日 10:00～11:00 【主催】株式会社〇〇〇〇
+                  <br>
+                  【対象】○○○○○のニーズ・課題をお持ちの〇〇</h4>
+              </dt>
+            </dl>
+          </a>
+        </div>
+      </div>
+
+      <a href="#" class="btn01">
+        <h4 class="ttl-quaternary">セミナー・イベント情報一覧を見る</h4>
+      </a>
+    </section>
+
+    <section class="septenary-section">
+      <h3 class="ttl-tertiary">お知らせ</h3>
+
+      <div class="sec-news">
+        <div class="containers">
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC sec-news__box--item">
+              <dt class="flex aiC sp-fS">
+                <time class="time">2022.9.20</time>
+                <span class="cat">カテゴリ</span>
+              </dt>
+
+              <dd>お知らせタイトルが入ります。</dd>
+            </dl>
+          </a>
+
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC sec-news__box--item">
+              <dt class="flex aiC sp-fS">
+                <time class="time">2022.9.20</time>
+                <span class="cat">カテゴリ</span>
+              </dt>
+
+              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタイトルが入</dd>
+            </dl>
+          </a>
+
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC sec-news__box--item">
+              <dt class="flex aiC sp-fS">
+                <time class="time">2022.9.20</time>
+                <span class="cat">カテゴリ</span>
+              </dt>
+
+              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
+            </dl>
+          </a>
+
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC sec-news__box--item">
+              <dt class="flex aiC sp-fS">
+                <time class="time">2022.9.20</time>
+                <span class="cat">カテゴリ</span>
+              </dt>
+
+              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタ</dd>
+            </dl>
+          </a>
+
+          <a href="#" class="sec-news__box">
+            <dl class="flex aiC sec-news__box--item">
+              <dt class="flex aiC sp-fS">
+                <time class="time">2022.9.20</time>
+                <span class="cat">カテゴリ</span>
+              </dt>
+
+              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
+            </dl>
+          </a>
+        </div>
+      </div>
+
+      <a href="#" class="btn01">
+        <h4 class="ttl-quaternary">お知らせ一覧を見る</h4>
+      </a>
+    </section>
+
+    <section class="octonary-section">
+      <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
+
+      <div class="useful-wp">
+        <div class="containers">
+          <div class="flex gap60">
+            <a href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">サービス資料ダウンロード</div>
+                <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる
+                  <br>
+                  サービス資料をダウンロードいただけます。</div>
+                <div class="more bgY small">サービス資料ダウンロード</div>
+              </summary>
+            </a>
+
+            <a href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">サービス資料ダウンロード</div>
+                <div class="card__box--txt">クレディセゾンのソリューションの詳細が分かる
+                  <br>
+                  サービス資料をダウンロードいただけます。</div>
+                <div class="more bgY small">サービス資料ダウンロード</div>
+              </summary>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 {% endblock %}
