--- a/app/pages/section/index.njk
+++ b/app/pages/section/index.njk
@@ -20,6 +20,7 @@
 {% block content %}
 
 <main>
+
   <!-- アンカーリンク 3つ4つどちらも対応　-->
   <section class="anc">
     <div class="containers">
@@ -41,7 +42,7 @@
       <div class="lead">リード文が入ります。リード文が入ります。リード文が入ります。</div>
       <div class="flex aiC sp-reverse">
         <dl class="sec01__box">
-          <dt><h3>タイトルがそのまま入りますタイトルがそsdfdsのまま入ります<br>タイトルがそのまま入ります</h3></dt>
+          <dt><h3>タイトルがそのまま入りますタイトルがそのまま入ります<br>タイトルがそのまま入ります</h3></dt>
           <dd>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります</dd>
         </dl>
         <figure class="sec01__img"><img src="/assets/img/common/img01.jpg" alt=""></figure>
