--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -68,6 +68,9 @@
             flex: 1;
 
             a {
+              -webkit-box-shadow: none;
+              box-shadow: none;
+
               span {
                 display: inline-block;
                 min-width: 178px;
@@ -83,6 +86,54 @@
             a:before {
               display: none;
             }
+          }
+
+          .slick-prev {
+            width: 4rem;
+            height: 4rem;
+            left: -90px;
+            top: 50%;
+            transform: translateY(-50%);
+          }
+
+          .slick-next {
+            width: 4rem;
+            height: 4rem;
+            right: -70px;
+            top: 50%;
+            transform: translateY(-50%);
+          }
+
+          .slick-next:before,
+          .slick-prev:before {
+            content: "";
+            z-index: 1;
+            background-color: #333;
+            background-size: 1.5rem 1.5rem;
+            background-repeat: no-repeat;
+            background-position: center center;
+            color: #fff;
+            font-size: 2.5rem;
+            line-height: 4rem;
+            text-align: center;
+            pointer-events: none;
+
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 4rem;
+            height: 4rem;
+            border-radius: 50%;
+            font-size: 0;
+            outline: 0;
+          }
+
+          .slick-prev:before {
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+          }
+
+          .slick-next:before {
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
           }
         }
       }
