refeactor header file

--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -49,45 +49,4 @@
         <a href="#">ご相談・お問合せ</a>
       </div>
     </div>
-  </nav>
-</ul></div><div id="gloval-nav">
-<ul class="list">
-  <li>
-    <a href="#">TOP</a>
-  </li>
-  <li>
-    <a href="#">製品紹介</a>
-  </li>
-  <li>
-    <a href="#">課題別ソリューション</a>
-  </li>
-  <li>
-    <a href="#">部門別課題</a>
-  </li>
-  <li>
-    <a href="#">実績・事例</a>
-  </li>
-  <li>
-    <a href="#">LaKeelが選ばれる理由</a>
-  </li>
-  <li>
-    <a href="#">お役立ち記事</a>
-  </li>
-  <li>
-    <a href="#">よくあるご質問</a>
-  </li>
-</ul>
-<ul class="aside">
-  <li>
-    <a href="#">セミナー情報</a>
-  </li>
-  <li>
-    <a href="#">ホワイトペーパー</a>
-  </li>
-  <li>
-    <a href="#">資料請求</a>
-  </li>
-  <li>
-    <a href="#">お問合せ・ご相談</a>
-  </li>
-</ul></div></header>
+  </header>
