--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -73,7 +73,7 @@
   <section class="tertiary-section">
     <div class="flex aiC gap50 sec-news__box--item">
       <dt class="flex aiC gap20 sp-fS">
-        <img src="/assets/img/footer/Image 6.png"/>
+        <img src="/assets/img/footer/footer_title.png"/>
       </dt>
 
       <ul class="flex custom-list gap20">
