--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -3,7 +3,7 @@
   margin: auto;
   padding: 140px 0 0px;
 
-  .welcome-section {
+  .section-welcome {
     padding: 61px 0 62px 0;
     text-align: center;
     background-color: #f7f7f7;
@@ -47,7 +47,7 @@
     }
   }
 
-  .secondary-section {
+  .section-secondary {
     padding: 70px 120px;
 
     .ttl-primary {
@@ -140,7 +140,7 @@
     }
   }
 
-  .tertiary-section {
+  .section-tertiary {
     text-align: center;
     padding: 60px 120px 70px;
 
@@ -188,7 +188,7 @@
     }
   }
 
-  .quaternary-section {
+  .section-quaternary {
     text-align: center;
     padding: 60px 120px 70px;
     background-color: #f7f7f7;
@@ -286,7 +286,7 @@
     }
   }
 
-  .quinary-section {
+  .section-quinary {
     padding: 70px 120px;
 
     .ttl-tertiary {
@@ -413,7 +413,7 @@
     }
   }
 
-  .senary-section {
+  .section-senary {
     background-color: #f7f7f7;
     padding: 70px 120px;
 
@@ -509,7 +509,7 @@
     }
   }
 
-  .septenary-section {
+  .section-septenary {
     background-color: #fff;
     padding: 70px 120px;
 
@@ -578,7 +578,7 @@
     }
   }
 
-  .octonary-section {
+  .section-octonary {
     background-color: #bbbbbb;
     color: white;
     padding: 70px 120px;
