--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -18,7 +18,7 @@
 {% block content %}
 
   <main class="home-page">
-    <section class="welcome-section">
+    <section class="section-welcome">
 
       <h3 class="ttl-tertiary">法人・個人事業主のお客様向け</h3>
 
@@ -51,7 +51,7 @@
       </div>
     </section>
 
-    <section class="secondary-section">
+    <section class="section-secondary">
 
       <h2 class="ttl-primary">おすすめサービス</h2>
 
@@ -90,7 +90,7 @@
       </div>
     </section>
 
-    <section class="tertiary-section">
+    <section class="section-tertiary">
 
       <h2 class="ttl-primary">目的から探す</h2>
 
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class="quaternary-section">
+    <section class="section-quaternary">
 
       <h2 class="ttl-secondary">さまざまなニーズや課題を解決しています</h2>
 
@@ -220,7 +220,7 @@
       </a>
     </section>
 
-    <section class="quinary-section">
+    <section class="section-quinary">
       <h3 class="ttl-tertiary">お役立ち資料（無料）ダウンロード</h3>
 
       <h4 class="ttl-quaternary">中小企業の経営者様や個人事業主のよくある課題に対して解決のヒントになる資料を無料でご提供しています。是非ご活用下さい。</h4>
@@ -287,7 +287,7 @@
       </a>
     </section>
 
-    <section class="senary-section">
+    <section class="section-senary">
       <h3 class="ttl-tertiary">セミナー・イベント情報</h3>
 
       <div class="sec-news">
@@ -339,7 +339,7 @@
       </a>
     </section>
 
-    <section class="septenary-section">
+    <section class="section-septenary">
       <h3 class="ttl-tertiary">お知らせ</h3>
 
       <div class="sec-news">
@@ -406,7 +406,7 @@
       </a>
     </section>
 
-    <section class="octonary-section">
+    <section class="section-octonary">
       <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
 
       <div class="useful-wp">
