--- a/app/pages/terinary/index.njk
+++ b/app/pages/terinary/index.njk
@@ -28,7 +28,7 @@
     <a href="#" class="btn01">まとめて資料をダウンロードする</a>
   </section>
 
-  <section class="primary-section">
+  <section class="section-primary">
     <h4 class="ttl-quaternary">中小企業の経営者様・経理ご担当者様へ</h4>
 
     <h2 class="ttl-primary">こんなニーズやお悩みありませんか？</h2>
@@ -530,7 +530,7 @@
     </div>
   </section>
 
-  <section class="section-quaternary">
+  <section class="section-terinary">
 
     <h2 class="ttl-secondary">各種サービス資料をまとめてダウンロード</h2>
 
@@ -539,13 +539,72 @@
     <a href="#" class="btn01">まとめて資料をダウンロードする</a>
   </section>
 
-  <section class="section-terinary">
+  <section class="section-quaternary">
 
-    <h2 class="ttl-secondary">各種サービス資料をまとめてダウンロード</h2>
+    <h2 class="ttl-secondary">お客様の声</h2>
 
-    <h3 class="ttl-tertiary">興味のあるサービス資料をまとめてダウンロードできます。</h3>
+    <div class="grid">
+      <div class="containers">
+        <div class="flex gap30 grid">
+          <div class="grid__card">
+            <div class="flex fS grid__card--cat">
+              <span class="cat">ビジネスカード</span>
+            </div>
 
-    <a href="#" class="btn01">まとめて資料をダウンロードする</a>
+            <h4 class="ttl-quaternary">
+              最強のコスパとマイル還元率です。
+            </h4>
+
+            <h5 class="ttl-quinary">
+              truck LLC/代表/善利光雅　様
+            </h5>
+
+            <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・</h6>
+
+            <a href="#" class="btn01">インタビューの続きを見る</a>
+          </div>
+
+          <div class="grid__card">
+            <div class="flex fS grid__card--cat">
+              <span class="cat">支払い.com</span>
+            </div>
+
+            <h4 class="ttl-quaternary">
+              本当に60秒で300万円の支払いが完了してびっくりしています。
+            </h4>
+
+            <h5 class="ttl-quinary">
+              建設業　代表　様
+            </h5>
+
+            <h6 class="ttl-senary">月末の職人への支払いに迫られ本当に困っていましたが、圧倒的に簡単に振込が完了し、手数料も安かったので大変助かりました。また利用させていただきます。</h6>
+          </div>
+
+          <div class="grid__card">
+            <div class="flex fS grid__card--cat">
+              <span class="cat">支払い.com</span>
+            </div>
+
+            <h4 class="ttl-quaternary">
+              ファクタリングの10%と比べて安くとても助かりました。
+            </h4>
+
+            <h5 class="ttl-quinary">
+              フリーランスエンジニア　様
+            </h5>
+
+            <h6 class="ttl-senary">引越しの初期費用が必要で急いでいたのですが、スピードはもちろん、ファクタリングの10%と比べて安くとても助かりました。 <br>条件の良い物件に引っ越せたので大満足です。</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="breadcrumb">
+    <ul class="flex">
+      <li><a href="#">TOP</a></li>
+      <li><a href="#">中小企業様向け</a></li>
+    </ul>
   </section>
 </main>
 {% endblock %}
