--- a/app/assets/scss/4-pages/_terinary.scss
+++ b/app/assets/scss/4-pages/_terinary.scss
@@ -942,103 +942,103 @@
     }
   }
 
-  .ttl-quaternary {
-    font-size: 20px;
-    font-weight: 400;
-    margin: 0;
+  .section-quaternary {
     text-align: center;
-  }
+    padding: 60px 120px 70px;
+    background-color: #f7f7f7;
 
-  .anc {
-    .containers {
-      max-width: unset;
-      padding: 0;
+    .ttl-secondary {
+      font-size: 32px;
+      margin-bottom: 61px;
+    }
 
-      .anc__box {
-        gap: 30px;
-        justify-content: center;
+    .grid {
+      margin-bottom: 0px;
 
-        li {
+      .containers {
+        max-width: unset;
+        padding: 0;
+
+        .grid__card {
           width: auto;
+          max-width: 380px;
+          padding: 35px 30px 30px 30px;
+          background-color: #fff;
 
-          a {
-            max-width: 380px;
-            border: 0;
-            padding: 0px 34px 60px 34px;
-            background-color: #e1e1e1;
-            box-shadow: none;
+          .grid__card--cat {
+            margin-bottom: 15px;
 
-            .ttl-quaternary-container {
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              height: 117px;
-              border: 0;
-
-              .ttl-quaternary {
-                font-size: 20px;
-                font-weight: 500;
-                margin: 0;
-                text-align: center;
-                color: #000;
-              }
-            }
-
-            .circle-container {
-              margin: auto;
-              width: 138px;
-              height: 138px;
-              border-radius: 50%;
-              background-color: #3498db;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              color: #fff;
-              font-size: 16px;
-              padding: 30px 0px;
-              background-color: #fff;
-              color: #000000;
-              border: 1px solid #747171;
-              margin-bottom: 30px;
-            }
-
-            .ttl-senary {
-              font-size: 16px;
-              font-weight: 400;
-              color: #000000;
-              margin-bottom: 30px;
-            }
-
-            .circle-with-arrow {
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              background-color: #000;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              position: relative;
-              margin: auto;
-            }
-
-            .arrow-down {
-              width: 18px;
-              height: 19px;
-              -webkit-transform: rotate(45deg);
-              -ms-transform: rotate(45deg);
-              transform: rotate(45deg);
-              margin-bottom: 10px;
-              border-right: 3px solid #fff;
-              border-bottom: 3px solid #fff;
-              position: absolute;
+            .cat {
+              background-color: #111450;
+              font-weight: 600;
+              font-size: 14px;
             }
           }
 
-          a:before {
+          .ttl-quaternary {
+            text-align: left;
+            font-size: 20px;
+            font-weight: 600;
+            min-width: 315px;
+            margin-bottom: 20px;
+            height: 60px;
+          }
+
+          .ttl-quinary {
+            text-align: center;
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 20px;
+          }
+
+          .ttl-senary {
+            text-align: left;
+            font-size: 16px;
+            font-weight: 400;
+            margin-bottom: 30px;
+            letter-spacing: 1px;
+          }
+
+          .btn01 {
+            display: inline-block;
+            background-color: #fff;
+            padding: 8px 31px 7px 31px;
+            color: #111450;
+            font-size: 14px;
+            border-width: 2px;
+            border-color: #111450;
+            box-shadow: none;
+          }
+
+          .btn01:before {
             display: none;
           }
         }
       }
+    }
+
+    .btn01 {
+      padding: 19px 0;
+      background-color: #fff;
+      color: #111450;
+      font-size: 14px;
+      border-color: #111450;
+      box-shadow: none;
+      max-width: 560px;
+
+      .ttl-quaternary {
+        font-size: 20px;
+        margin: 0;
+      }
+    }
+  }
+
+  .breadcrumb {
+    padding: 0 120px;
+    font-size: 14px;
+
+    ul {
+      justify-content: flex-start;
     }
   }
 }
