--- a/app/assets/scss/4-pages/_terinary.scss
+++ b/app/assets/scss/4-pages/_terinary.scss
@@ -47,9 +47,10 @@
 
     .ttl-quaternary {
       font-size: 20px;
-      font-weight: 400;
+      font-weight: 600;
       margin: 0;
       text-align: center;
+      margin-bottom: 30px;
     }
 
     .anc {
@@ -80,7 +81,7 @@
 
                 .ttl-quaternary {
                   font-size: 20px;
-                  font-weight: 500;
+                  font-weight: 600;
                   margin: 0;
                   text-align: center;
                   color: #000;
@@ -367,6 +368,7 @@
               font-size: 16px;
               width: auto;
               margin-bottom: 30px;
+              text-align: left;
             }
 
             .latest {
